# AI-mnotsure

./: .gitignore  README.md  debug.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: full-eval.yml  smoke.yml
data/: chunks.pkl  index.faiss  source.txt
evals/: golden_dataset.json  pipeline_cache.json  run_evals.py
evals/results/: summary.json
src/: app.py  chatbot.py  ingest.py  retriever.py
