[project]
name = "ai-mnotsure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.100.0",
    "deepeval>=4.0.2",
    "faiss-cpu>=1.8.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tiktoken>=0.13.0",
]
